--- a/.classpath
+++ b/.classpath
@@ -54,7 +54,7 @@
 	<classpathentry kind="lib" path="G:/Vikas- Shailesh - demo Framework/itext-1.3.1.jar"/>
 	<classpathentry kind="lib" path="G:/Vikas- Shailesh - demo Framework/sikulixapi.jar"/>
 	<classpathentry kind="lib" path="G:/Appium/java-client-5.0.0-BETA2.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
